# minicard

./: CMakeLists.txt
